--- a/style.css
+++ b/style.css
@@ -50,6 +50,8 @@ body {
 }
 .Media-Queries li:hover {
   transform: scale(1.05);
+  color: #b21f1f;
+  background-color: white;
 }
 .Media-Queries > ul > li abbr[title] {
   text-decoration: none;
