--- a/style.css
+++ b/style.css
@@ -73,20 +73,32 @@ body {
 }
 
 .MainConversion #displayresult {
-  width: 90%;
-  height: 60px;
+  width: 100%;
+  height: 100px;
+  margin-bottom: 20px;
+  font-family: poppins;
+}
+
+#displayresult #HeaderDisplay {
+  font-size: 40px;
+  margin: 0px 0px;
 }
 .converter .MainConversion input {
   display: block;
   margin: auto;
   width: 30%;
   font-size: 20px;
-  border: 2px solid black;
+  padding: 3px;
+  border: 2px solid gray;
   border-radius: 20px;
   margin-top: 10px;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .converter .MainConversion label {
   margin-top: 10px;
+  font-size: 20px;
+  font-family: montserrat;
+  font-weight: 600;
 }
