--- a/style.css
+++ b/style.css
@@ -108,3 +108,14 @@ body {
   font-family: montserrat;
   font-weight: 600;
 }
+
+.MainConversion button {
+  width: 200px;
+  font-family: poppins;
+  font-size: 18px;
+  padding: 5px 10px;
+  background-color: rgb(0, 0, 61);
+  border: 0px;
+  color: white;
+  border-radius: 4px;
+}
