Changed the position of the p under to over input and added the header and p tag for every device with emoticon

--- a/style.css
+++ b/style.css
@@ -109,6 +109,12 @@ body {
   font-weight: 600;
 }
 
+.MainConversion {
+  font-family: montserrat;
+  margin: 3px;
+  font-size: 15px;
+  font-weight: 600;
+}
 .MainConversion button {
   width: 200px;
   font-family: poppins;
