--- a/style.css
+++ b/style.css
@@ -159,5 +159,55 @@ body {
 }
 
 #knowScreenHeight {
-  width: 500px;
+  width: 100%;
+}
+
+#ScreenSelection {
+  padding: 10px;
+  display: block;
+  text-align: center;
+  padding-top: 40px;
+}
+
+#ScreenSelection label {
+  text-align: center;
+  display: block;
+  font-size: 35px;
+  font-weight: 600;
+  font-family: poppins;
+}
+
+#select {
+  display: block;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 200px;
+  font-family: montserrat;
+  font-weight: 600;
+  font-size: 20px;
+  padding: 5px;
+  border-radius: 5px;
+  border: 0px;
+  background-color: #b21f1f;
+  color: white;
+}
+
+#select option {
+  background-color: thistle;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+  color: black;
+}
+
+#ScreenSelection button {
+  width: 200px;
+  font-family: poppins;
+  font-size: 18px;
+  padding: 5px 10px;
+  background-color: rgb(0, 0, 61);
+  border: 0px;
+  color: white;
+  border-radius: 4px;
 }
