--- a/style.css
+++ b/style.css
@@ -240,4 +240,14 @@ body {
     border: 1px solid white;
     padding: 6px;
   }
+
+  .ScreenSelector #knowScreensize h5 {
+    font-size: 30px;
+  }
+
+  #select {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
 }
