Changed the header and li's font size and border radius to vw units for more responsiveness

--- a/style.css
+++ b/style.css
@@ -10,14 +10,13 @@ body {
 }
 
 .top-head > h1 {
-  margin: 0px;
-  margin-top: 10px;
+  margin: auto;
   font-family: poppins;
   color: white;
+  font-size: 2.5vw;
   font-weight: 600;
   width: 50%;
   padding-left: 20px;
-  padding-bottom: 10px;
 }
 
 .Media-Queries {
@@ -27,7 +26,7 @@ body {
 .Media-Queries > ul {
   display: flex;
   flex-wrap: nowrap;
-  column-gap: 25px;
+  column-gap: 1.5vw;
   float: right;
   padding-right: 30px;
   box-sizing: border-box;
@@ -38,9 +37,9 @@ body {
   list-style: none;
   border: 2px solid white;
   font-family: montserrat;
-  font-size: 20px;
-  font-weight: 700;
-  border-radius: 20px;
+  font-size: 1.6vw;
+  font-weight: 600;
+  border-radius: 1.3rem;
   color: white;
   padding: 5px 15px;
   transition: all 0.3s ease;
