Added font weight for the input values

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ body {
   padding: 3px;
   border: 0px;
   font-family: Montserrat;
+  font-weight: 600;
   border-radius: 20px;
   margin-top: 10px;
   margin-bottom: 30px;
