--- a/style.css
+++ b/style.css
@@ -114,6 +114,8 @@ body {
 input::placeholder {
   font-family: youtube sans;
   color: rgba(0, 0, 0, 0.671);
+  font-size: 16px;
+  font-weight: normal;
 }
 
 .MainConversion {
