--- a/style.css
+++ b/style.css
@@ -9,9 +9,6 @@ body {
   margin: 0px;
 }
 
-input:active {
-  border: 0px;
-}
 /* universal button styling*/
 button {
   transition: transform 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -148,7 +145,7 @@ input::placeholder {
   font-family: poppins;
   font-size: 18px;
   padding: 5px 10px;
-  margin: auto 2%;
+  margin: 2% 2%;
   background-color: #000;
   border: 0px;
   color: white;
@@ -278,7 +275,10 @@ code {
   .top-head > h1 {
     width: 45%;
   }
-
+  input:focus {
+    border: none;
+    outline: none;
+  }
   .Media-Queries {
     float: right;
     width: 55%;
@@ -396,7 +396,12 @@ code {
   }
 
   .Pxconversion button {
-    margin-top: 20px;
+    margin-top: 10px;
     width: 100px;
+    font-size: 15px;
+  }
+
+  button:hover {
+    transform: none;
   }
 }
