--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ code {
   .topselectionsection {
     display: flex;
     width: 100%;
-    padding: 10px;
+    padding: 5px;
     box-sizing: border-box;
     align-items: center;
     justify-content: center;
@@ -388,10 +388,10 @@ code {
 
   .DeviceSelectionHeader {
     display: block;
-    margin: 20px auto 10px;
+    margin: 10px auto 10px;
     text-align: center;
     font-size: 20px;
-    font-family: Poppins;
+    font-family: montserrat;
     font-weight: 600;
   }
 
