--- a/style.css
+++ b/style.css
@@ -168,6 +168,9 @@ input::placeholder {
 
 .ScreenSelector #knowScreensize {
   width: 100%;
+
+  height: 50%;
+  box-sizing: border-box;
 }
 
 .ScreenSelector #knowScreensize h5 {
@@ -219,6 +222,7 @@ code {
   display: block;
   text-align: center;
   padding-top: 0px;
+  height: 50%;
 }
 
 #ScreenSelection label {
