--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ button:active {
 .converter .MainConversion input {
   display: block;
   margin: auto;
-  width: 30%;
+  width: 180px;
   font-size: 20px;
   padding: 3px;
   border: 0px;
@@ -251,11 +251,12 @@ code {
 }
 
 #select option {
-  background-color: thistle;
+  background-color: rgb(255, 140, 0);
   text-align: center;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 600;
-  color: black;
+  color: white;
+  border: 0px;
 }
 
 #ScreenSelection button {
@@ -275,6 +276,21 @@ code {
 
 .DeviceSelectionHeader {
   display: none;
+}
+
+.mainflex {
+  width: 100%;
+  background-color: darkorange;
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.miniflex {
+  width: 100px;
+  height: 100px;
+  background-color: black;
 }
 
 @media screen and (max-width: 550px) {
