--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ button:active {
 }
 .top-head > h1 {
   margin: auto;
-  font-family: poppins;
+  font-family: montserrat;
   color: white;
   font-size: 2.5vw;
   font-weight: 600;
@@ -90,7 +90,7 @@ button:active {
   width: 100%;
   height: 100px;
   margin-bottom: 30px;
-  font-family: poppins;
+  font-family: montserrat;
 }
 
 #displayresult #HeaderDisplay {
@@ -111,44 +111,45 @@ button:active {
   font-size: 20px;
   padding: 3px;
   border: 0px;
-  font-family: Montserrat;
+  font-family: poppins;
   font-weight: 600;
   border-radius: 20px;
   margin-top: 10px;
   margin-bottom: 30px;
   text-align: center;
-  background-color: rgb(177, 177, 177);
+  background-color: black;
 }
 
 .converter .MainConversion label {
   font-size: 18px;
-  font-family: youtube sans;
+  font-family: poppins;
   font-weight: 600;
 }
 /* Global Place holder Styling*/
 
 input::placeholder {
-  font-family: youtube sans;
-  color: rgba(0, 0, 0, 0.671);
+  font-family: poppins;
+  color: white;
   font-size: 16px;
   font-weight: normal;
 }
 
 .MainConversion {
-  font-family: montserrat;
+  font-family: poppins;
   margin: 3px;
   font-size: 15px;
   font-weight: 600;
 }
 .MainConversion button {
   width: 150px;
-  font-family: poppins;
+  font-family: montserrat;
   font-size: 18px;
+  font-weight: 600;
   padding: 5px 10px;
   margin: 2% 2%;
-  background-color: #000;
+  background-color: darkorange;
   border: 0px;
-  color: white;
+  color: black;
   border-radius: 4px;
 }
 
@@ -177,7 +178,7 @@ input::placeholder {
   font-size: 3vw;
   margin: 0px;
   margin-top: 10px;
-  font-family: poppins;
+  font-family: montserrat;
 }
 
 code {
@@ -187,7 +188,7 @@ code {
 }
 .ScreenSizeChecker {
   display: flex;
-  font-family: montserrat;
+  font-family: poppins;
   font-weight: 600;
   width: 100%;
   text-align: center;
@@ -206,7 +207,7 @@ code {
   margin-top: 40px;
   padding: 5px 10px;
   font-size: 19px;
-  font-family: poppins;
+  font-family: montserrat;
   font-weight: 500;
   background-color: #000;
   color: white;
@@ -230,7 +231,7 @@ code {
   display: block;
   font-size: 3vw;
   font-weight: 600;
-  font-family: poppins;
+  font-family: montserrat;
   margin-bottom: 40px;
 }
 
@@ -240,7 +241,7 @@ code {
   margin-top: 20px;
   margin-bottom: 20px;
   width: 200px;
-  font-family: montserrat;
+  font-family: poppins;
   font-weight: 600;
   font-size: 20px;
   padding: 5px;
@@ -261,7 +262,7 @@ code {
 
 #ScreenSelection button {
   width: 200px;
-  font-family: poppins;
+  font-family: montserrat;
   font-size: 18px;
   padding: 5px 10px;
   background-color: rgb(0, 0, 0);
@@ -350,7 +351,7 @@ code {
   .topselectionsection .Topchoice {
     width: 45px;
     font-size: 15px;
-    font-family: poppins;
+    font-family: montserrat;
     font-weight: 500;
     background-color: darkorange;
     height: 45px;
@@ -385,7 +386,7 @@ code {
     margin-top: 5px;
     margin-bottom: 5px;
     font-size: 3vw;
-    font-family: poppins;
+    font-family: montserrat;
   }
 
   .converter .MainConversion input {
@@ -398,7 +399,7 @@ code {
     margin: 10px auto 10px;
     text-align: center;
     font-size: 20px;
-    font-family: montserrat;
+    font-family: poppins;
     font-weight: 600;
   }
 
@@ -410,7 +411,7 @@ code {
 
   .converter .MainConversion label {
     font-size: 15px;
-    font-family: montserrat;
+    font-family: poppins;
     font-weight: 700;
   }
   button:hover {
