--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ button:active {
 .outerlayer {
   padding: 10px;
   display: flex;
-  height: 100%;
+  height: auto;
   padding-top: 0px;
   padding-bottom: 0px;
 }
@@ -85,6 +85,7 @@ button:active {
   width: 50%;
   padding: 10px;
   padding-top: 0px;
+  padding-bottom: 10px;
 }
 
 .MainConversion {
@@ -434,5 +435,9 @@ code {
 
   .ScreenSelector {
     display: none;
+  }
+
+  code {
+    margin-bottom: 5px;
   }
 }
