--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   margin: 0px;
   background-color: #b8c6db;
   background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
+  background-size: cover;
 }
 
 .top-head {
@@ -249,7 +250,8 @@ code {
   margin-bottom: 40px;
 }
 
-#select {
+#select,
+#Oneselect {
   display: block;
   margin: auto;
   margin-top: 20px;
@@ -265,7 +267,8 @@ code {
   color: white;
 }
 
-#select option {
+#select option,
+#Oneselect option {
   background-color: rgb(255, 140, 0);
   text-align: center;
   font-size: 15px;
